@@ -19,12 +19,14 @@ class AssignRollNo(models.TransientModel):
     def assign_rollno(self):
         '''Method to assign roll no to students'''
         student_obj = self.env['student.student']
+        # Search Student
         for student_data in self:
             search_student_ids = student_obj.search([
                 ('standard_id', '=', student_data.standard_id.id),
                 ('medium_id', '=', student_data.medium_id.id),
                 ('division_id', '=', student_data.division_id.id)],
                                                     order="name")
+        # Assign roll no.
         number = 1
         for student in search_student_ids:
             number += 1
