@@ -5,39 +5,39 @@
 
         <!-- Form View Of Student Meeting Wizard  -->
 
-        <record id="view_student_meeting_form" model="ir.ui.view">
-            <field name="name">student.meeting.form</field>
-            <field name="model">student.meeting</field>
-            <field name="arch" type="xml">
-            <form string="Student Meeting">
-                <sheet>
-                    <label for="name"/>
-                    <h1>
-                        <field name="name" placeholder="Enter Name"/>
-                    </h1>
-                    <group col="4" colspan="4">
-                        <field name="meeting_date" placeholder="Enter Meeting Start Time"/>
-                        <field name="deadline" placeholder="Enter Deadline"/>
-                        <field name="description" colspan="4" placeholder="Description"/>
-                    </group>
-                    <footer>
-                        <button name="set_meeting" string="Set Meeting" type="object"/>
-                        <button class="btn btn-sm btn-default fa fa-ban" special="cancel" string="Cancel"/>
-                    </footer>
-                </sheet>
-            </form>
-            </field>
-        </record>
+<!--         <record id="view_student_meeting_form" model="ir.ui.view"> -->
+<!--             <field name="name">student.meeting.form</field> -->
+<!--             <field name="model">student.meeting</field> -->
+<!--             <field name="arch" type="xml"> -->
+<!--             <form string="Student Meeting"> -->
+<!--                 <sheet> -->
+<!--                     <label for="name"/> -->
+<!--                     <h1> -->
+<!--                         <field name="name" placeholder="Enter Name"/> -->
+<!--                     </h1> -->
+<!--                     <group col="4" colspan="4"> -->
+<!--                         <field name="meeting_date" placeholder="Enter Meeting Start Time"/> -->
+<!--                         <field name="deadline" placeholder="Enter Deadline"/> -->
+<!--                         <field name="description" colspan="4" placeholder="Description"/> -->
+<!--                     </group> -->
+<!--                     <footer> -->
+<!--                         <button name="set_meeting" string="Set Meeting" type="object"/> -->
+<!--                         <button class="btn btn-sm btn-default fa fa-ban" special="cancel" string="Cancel"/> -->
+<!--                     </footer> -->
+<!--                 </sheet> -->
+<!--             </form> -->
+<!--             </field> -->
+<!--         </record> -->
 
         <!-- Action Of Form View Of Student Meeting Wizard -->
 
-        <act_window id="action_student_meeting_form"
-            key2="client_action_multi"
-            name="Student Meeting"
-            res_model="student.meeting"
-            src_model="student.student"
-            view_mode="form"
-            target="new"
-            view_type="form"/>
+<!--         <act_window id="action_student_meeting_form" -->
+<!--             key2="client_action_multi" -->
+<!--             name="Student Meeting" -->
+<!--             res_model="student.meeting" -->
+<!--             src_model="student.student" -->
+<!--             view_mode="form" -->
+<!--             target="new" -->
+<!--             view_type="form"/> -->
 
 </odoo>
